Fixed compose state bug in the Message Composer screen. Adjusted Scaffolding and Fab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UserMessages"
         android:enableOnBackInvokedCallback="true"
+
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.UserMessages">
+            android:theme="@style/Theme.UserMessages"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
