--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,43 +2,45 @@
 androidxComposeBom = "2023.08.00"
 androidxLifecycle = "2.7.0"
 androidxNavigation = "2.7.6"
+androidxActivityCompose = "1.8.2"
+androidxCoreKtx = "1.12.0"
 androidGradlePlugin = "8.2.2"
 kotlin = "1.9.0"
-androidxCoreKtx = "1.12.0"
-androidxAppcompat = "1.6.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-com-google-android-material-material = "1.11.0"
-#material = "1.11.0"
+retrofit = "2.9.0"
+turbine = "1.0.0"
 
 [libraries]
+#startof Compose BOM
 androidx-compose-bom =          { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBom" }
 #androidx-compose-foundation =           { module = "androidx.compose.foundation:foundation" }
 androidx-compose-ui =                   { module = "androidx.compose.ui:ui" }
 androidx-compose-ui-graphics =          { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-ui-tooling-preview =   { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-compose-material3 =            { module = "androidx.compose.material3:material3" }
+#endof Compose BOM
 lifecycle-viewmodel-ktx =       { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
 lifecycle-viewmodel-compose =   { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 lifecycle-runtime-ktx =         { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 lifecycle-runtime-compose =     { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
 navigation-runtime-ktx =    { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "androidxNavigation" }
 navigation-compose =        { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigation" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivityCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCoreKtx" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppcompat" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
-material = { group = "com.google.android.material", name = "material", version.ref = "com-google-android-material-material" }
-#material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit2-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [bundles]
 featuremodule-compose = [
     "androidx-compose-ui",
     "androidx-compose-ui-graphics",
     "androidx-compose-ui-tooling-preview",
-    "androidx-compose-material3",
     "lifecycle-viewmodel-ktx",
     "lifecycle-viewmodel-compose",
     "lifecycle-runtime-ktx",
@@ -46,12 +48,8 @@ featuremodule-compose = [
     "navigation-runtime-ktx",
     "navigation-compose",
 ]
-featuremodule-android = [
-    "androidx-core-ktx",
-    "androidx-appcompat",
-]
 
-featuremodule-android-test = [
+android-test = [
     "androidx-test-ext-junit",
     "espresso-core",
 ]
