--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,10 +7,16 @@ androidxCoreKtx = "1.12.0"
 androidGradlePlugin = "8.2.2"
 kotlin = "1.9.0"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
+androidxTestRunner = "1.5.2"
+#androidx-test-ext-junit = "1.1.5"
+#espresso-core = "3.5.1"
 retrofit = "2.9.0"
 turbine = "1.0.0"
+kotlinxCoroutines = "1.6.4"
+androidx-test-ext-junit = "1.1.5"
+espresso-core = "3.5.1"
+appcompat = "1.6.1"
+material = "1.11.0"
 
 [libraries]
 #startof Compose BOM
@@ -19,6 +25,8 @@ androidx-compose-bom =          { module = "androidx.compose:compose-bom", versi
 androidx-compose-ui =                   { module = "androidx.compose.ui:ui" }
 androidx-compose-ui-graphics =          { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-ui-tooling-preview =   { module = "androidx.compose.ui:ui-tooling-preview" }
+androidx-compose-ui-tooling =           { module = "androidx.compose.ui:ui-tooling" }
+androidx-compose-ui-test-junit4 =       { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-compose-material3 =            { module = "androidx.compose.material3:material3" }
 #endof Compose BOM
 lifecycle-viewmodel-ktx =       { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
@@ -29,12 +37,21 @@ navigation-runtime-ktx =    { module = "androidx.navigation:navigation-runtime-k
 navigation-compose =        { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigation" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivityCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCoreKtx" }
+androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidxTestRunner" }
+kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
+
+
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+#androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+#espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit2-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [bundles]
 featuremodule-compose = [
@@ -49,10 +66,10 @@ featuremodule-compose = [
     "navigation-compose",
 ]
 
-android-test = [
-    "androidx-test-ext-junit",
-    "espresso-core",
-]
+#android-test = [
+#    "androidx-test-ext-junit",
+#    "espresso-core",
+#]
 
 
 
