--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,14 @@ androidGradlePlugin = "8.2.2"
 kotlin = "1.9.0"
 junit = "4.13.2"
 androidxTestRunner = "1.5.2"
+androidxEspresso = "3.5.0"
+androidxProfileinstaller = "1.3.1"
+androidxBenchmark = "1.2.3"
+androidxTestCore = "1.5.0"
+androidxTestExt = "1.1.4"
+androidxTestRules = "1.5.0"
+androidxTracing = "1.1.0"
+androidxUiAutomator = "2.2.0"
 retrofit = "2.9.0"
 turbine = "1.0.0"
 kotlinxCoroutines = "1.6.4"
@@ -32,6 +40,14 @@ navigation-compose =        { module = "androidx.navigation:navigation-compose",
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivityCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCoreKtx" }
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidxTestRunner" }
+androidx-profileinstaller = { group = "androidx.profileinstaller", name = "profileinstaller", version.ref = "androidxProfileinstaller" }
+androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro-junit4", version.ref = "androidxBenchmark" }
+androidx-test-core =            { group = "androidx.test", name = "core", version.ref = "androidxTestCore" }
+androidx-test-espresso-core =   { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidxEspresso" }
+androidx-test-ext =             { group = "androidx.test.ext", name = "junit-ktx", version.ref = "androidxTestExt" }
+androidx-test-rules =           { group = "androidx.test", name = "rules", version.ref = "androidxTestRules" }
+androidx-test-uiautomator =     { group = "androidx.test.uiautomator", name = "uiautomator", version.ref = "androidxUiAutomator" }
+
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
